mobile fix for right aligned narrow callouts

--- a/web/themes/custom/myusf/sass/src/partials/_wysiwyg.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_wysiwyg.scss
@@ -274,6 +274,10 @@ blockquote {
 		&.block-right,
 		&.block_right {
 			margin: 0.375rem 0 1.75rem 1.25rem;
+
+			@include media-breakpoint-down(phone)  {
+				margin: .375rem 0 1.75rem 0;
+			}
 		}
 	}
 }
@@ -298,6 +302,10 @@ blockquote {
 		&.block-right,
 		&.block_right {
 			margin: 0.375rem 0 1.56rem 1.25rem;
+
+			@include media-breakpoint-down(phone)  {
+				margin: .375rem 0 1.75rem 0;
+			}
 		}
 	}
 }
